--- a/src/components/dp-ambulance-wl-editor/dp-ambulance-wl-editor.css
+++ b/src/components/dp-ambulance-wl-editor/dp-ambulance-wl-editor.css
@@ -1,8 +1,11 @@
 :host {
   --_wl-editor_gap: var(--wl-gap, 0.5rem);
-
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--_wl-editor_gap);
+  padding: var(--_wl-editor_gap);
 }
 
 form {
@@ -32,7 +35,6 @@ form {
   flex-direction: row;
   justify-content: flex-end;
   gap: 1rem;
-
 }
 
 .stretch-fill {
